# m1-lsp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deps-refresh.yml  release.yml
docs/plans/: 2026-06-23-eval-integration-plan.md
docs/superpowers/plans/: 2026-05-30-m1-lsp-v1.md  2026-05-31-m1-lsp-v2.md
docs/superpowers/specs/: 2026-05-30-m1-lsp-v1-design.md  2026-05-31-m1-lsp-v2-design.md
editors/nvim/: README.md  m1.lua
lua/m1_lsp/: init.lua
src/: analysis.rs  backend.rs  config.rs  convert.rs  disk_read.rs  document.rs  fmt_backend.rs  format.rs  lib.rs  line_index.rs  lint_backend.rs  main.rs  project_store.rs  semtok_delta.rs  stdin_normalize.rs  type_backend.rs
src/eval/: config.rs  engine.rs  mod.rs  render.rs
src/features/: call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  document_link.rs  document_symbols.rs  folding.rs  goto.rs  hover.rs  inlay.rs  intrinsics_render.rs  locate.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  workspace_symbol.rs
src/features/rename/: file_rename.rs  func.rs  group.rs  helpers.rs  local.rs  m1prj.rs  mod.rs  tests.rs
tests/: cli.rs  corpus.rs  deep_nesting.rs  features.rs  integration.rs  project.rs
tests/fixtures/mini/: Project.m1prj  parameters.m1cfg
tests/fixtures/mini/Scripts/: Demo.Update.m1scr
