[package]
name = "m1-lsp"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Language server for the MoTeC M1 script language (.m1scr)"
publish = false

[[bin]]
name = "m1-lsp"
path = "src/main.rs"

[lib]
name = "m1_lsp"
path = "src/lib.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
dashmap = "6"
serde_json = "1"
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", branch = "main" }
m1-lint = { git = "https://github.com/C-Nucifora/m1-lint.git", branch = "main" }
m1-fmt = { git = "https://github.com/C-Nucifora/m1-fmt.git", branch = "main" }
m1-typecheck = { git = "https://github.com/C-Nucifora/m1-typecheck.git", branch = "main" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros"] }
