[package]
name = "m1-lsp"
version = "0.30.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Language server for the MoTeC M1 script language (.m1scr)"
publish = false

[[bin]]
name = "m1-lsp"
path = "src/main.rs"

[lib]
name = "m1_lsp"
path = "src/lib.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", tag = "v0.7.0" }
m1-lint = { git = "https://github.com/C-Nucifora/m1-lint.git", tag = "v0.12.0" }
m1-fmt = { git = "https://github.com/C-Nucifora/m1-fmt.git", tag = "v0.8.0" }
m1-typecheck = { git = "https://github.com/C-Nucifora/m1-typecheck.git", tag = "v0.25.2" }
m1-workspace = { git = "https://github.com/nedlane/m1-workspace.git", tag = "v0.5.0" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "time"] }
